<resources>
    <string name="app_name">PantelaWeather</string>
    <string name="appName">PantelaWeather</string>
    <string name="locationInsert">Lokacija za prikaz vremenske prognoze:</string>
    <string name="mainActivityButtonText">Dodaj grad</string>
    <string name="locationActivityDetails">Lokacija: </string>
    <string name="dayActivityDetails">Dan: </string>
    <string name="temperatureButton">Temperatura</string>
    <string name="sunRiseSetButton">Izlazak i zalazak sunca</string>
    <string name="windButton">Vetar</string>
    <string name="unitActivityDetails">Jedinica:</string>
    <string name="temperatureActivityDetails">Temperatura: </string>
    <string name="pressureActivityDetails">Pritisak: </string>
    <string name="airHumidityActivityDetails">Vlaznost vazduha: </string>
    <string name="windDirectionActivityDetails">Pravac: </string>
    <string name="windSpeedActivityDetails">Brzina vetra: </string>
    <string name="sunsetTimeActivityDetails">Zalazak sunca: </string>
    <string name="sunriseTimeActivityDetails">Izlazak sunca: </string>
    <string name="temperature">11 °C</string>
    <string name="dateActivityDetails">Datum:</string>
    <string name="buttonStatisticsActivitiDetails">Statistika</string>
    <string name="textViewLastUpdate">poslednje azuriranje</string>
    <string name="buttonUpdate">Azuriraj</string>
</resources>
