<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="8"
    android:layout_marginLeft="@android:dimen/app_icon_size"
    android:layout_marginRight="@android:dimen/app_icon_size">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/appName"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:textSize="36dp"
        android:textStyle="bold"/>
    <TextView
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="20dp"
        android:text="@string/locationInsert"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:id="@+id/location" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/mainActivityButtonText"
            android:id="@+id/buttonMainActivity"/>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/listOfCities" />

</LinearLayout>